--- a/9HugMoment/9HugMoment/Info.plist
+++ b/9HugMoment/9HugMoment/Info.plist
@@ -37,6 +37,10 @@
 	<string>1378676099100353</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Calibri.ttf</string>
+	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Permissions for App even when not in use</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
